--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "serialize-javascript": "^2.1.2",
     "styled-components": "^4.4.0",
     "uifx": "^2.0.3",
     "yup": "^0.27.0"
